--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
+    <div uk-html-include="snippets/header.html"></div>
 
+    <!-- HTML Include-->
+    <script>
+        includeHTML();
+    </script>
 </body>
 
 </html>
